test/classes/initializers/generics/issue-16508-user.good
issue-16508-user.chpl:4: error: type mismatch when assigning to int from real
